force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/Servicios_generales_y_especialidades__mdt.object-meta.xml
<CustomObject>
    <description>Para mapear los tipo de servicios del modulo de paciente con el tipo de servicio en &quot;Servicio de modulo&quot;</description>
    <label>Servicios de modulo</label>
    <pluralLabel>Servicios generales y especialidades</pluralLabel>
</CustomObject>