force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Cantidad_de_tareas_medica__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_tareas_medica__c</fullName>
    <label>Cantidad de tareas medica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>