force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Es_Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Es_Especialidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Especialidad</label>
    <type>Checkbox</type>
</CustomField>