force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Especialidades__c.field-meta.xml
<CustomField>
    <fullName>Especialidades__c</fullName>
    <label>Especialidades</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicio visita especialista en deglución</fullName>
                <default>true</default>
                <label>Servicio visita especialista en deglución</label>
            </value>
            <value>
                <fullName>Servicio visita de kinesiología</fullName>
            </value>
            <value>
                <fullName>Servicio de visita profesionales cuidado nutricional completo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>