force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Generales__c.field-meta.xml
<CustomField>
    <fullName>Generales__c</fullName>
    <label>Generales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicio visita enfermería</fullName>
                <default>true</default>
                <label>Servicio visita enfermería</label>
            </value>
            <value>
                <fullName>Servicio visita nutricional</fullName>
            </value>
            <value>
                <fullName>Servicio visita medica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>