force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Nombre_de_especialista__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_especialista__c</fullName>
    <label>Nombre de especialista</label>
    <length>50</length>
    <type>Text</type>
</CustomField>