force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Nombre_de_servicio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_servicio__c</fullName>
    <label>Nombre de servicio</label>
    <length>150</length>
    <type>Text</type>
</CustomField>