force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Numero_de_Jerarquia__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Jerarquia__c</fullName>
    <label>Numero de Jerarquía</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>