force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Pick__c.field-meta.xml
<CustomField>
    <fullName>Pick__c</fullName>
    <label>Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
                <default>true</default>
                <label>Test</label>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>