force-app/main/default/objects/Servicios_generales_y_especialidades__mdt/fields/Tipo_de_servicio_en_MDP__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_servicio_en_MDP__c</fullName>
    <label>Tipo de servicio en MDP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>